# cw2

./: .gitignore  README.md
backend/: CMakeLists.txt  README.md  _env
backend/include/: adminservice.h  auth.h  config.h  database.h  emailservice.h  eventservice.h  httpserver.h  jwt.h  password.h  queryloader.h  ticketservice.h
backend/sql/: create_tables.sql  queries.sql  seed_data.sql
backend/src/: adminservice.cpp  auth.cpp  config.cpp  database.cpp  emailservice.cpp  eventservice.cpp  httpserver.cpp  jwt.cpp  main.cpp  password.cpp  queryloader.cpp  ticketservice.cpp
frontend/: index.html
frontend/css/: styles.css
frontend/js/: api.js  auth.js  main.js
frontend/pages/: admin.html  booking-info.html  change-password.html  events.html  forgot-password.html  login.html  register.html  ticket-detail.html  tickets.html
